2001-05-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k33

	* ntpd/ntp_proto.c (receive): Validate the source port.  Lose
	NTPv1 support.
	* ntpd/ntp_loopfilter.c (local_clock): Sanity check sys_poll
	earlier instead of later.
	From: Dave Mills.

	* ntpd/refclock_oncore.c (oncore_msg_any): We don't always have
	GETTIMEOFDAY().

2001-05-09  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_shm.c (shm_poll): Apply JAN_1970 correction after
	calling TVTOTS(), just like everybody else does.
	From: David Malone <dwmalone@maths.tcd.ie>

	* ntpd/refclock_ulink.c: fixed 33x quality flag, added more
	debugging stuff, updated 33x time code explanation.
	From: s.l.smith (via j.c.lang).

2001-05-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k32

	* ntpd/ntp_loopfilter.c: rstclock now takes a 3rd argument, the
	last offset.
	(init_loopfilter): Use it.
	(local_clock): Use it.  Clean up the code.
	(loop_config): Use it.
	(rstclock): Implement it.  Clean up the code.
	From Dave Mills.

2001-05-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k31

	* ntpdc/ntpdc_ops.c (sysstats): That's 'bad packet format'
	(instead of '... length'), and 'packets rejected' (instead of
	'limitation rejects'.
	* ntpd/ntp_proto.c (receive): PUBKEY fixes.  Move KoD stuff to
	process_packet().
	(process_packet):  Move KoD stuff here... 
	(peer_clear): Unspec the stratum, too.
	(clock_filter): Don't update peer->epoch here.  Fix the filter
	test when checking the epoch.
	(fast_xmit): Send back STRATUM_UNSPEC on a KoD packet.
	(init_proto): Initialize sys_jitter.

	* ntpd/ntp_loopfilter.c: rstclock() takes 2 parameters now.
	(init_loopfilter): Use it...
	(local_clock): Ditto, and change the "mu" calculation.  Improve
	the jitter test in S_SYNC.  Use peer->epoch (not current_time) to
	update the last_time.  Update debug info.
	(rstclock): 2nd arg - the epoch to use.  Use it.
	(loop_config): update call to rstclock.
	From: Dave Mills.
