@@ -1,3 +1,13 @@
+2001-05-11  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/ntp_util.c (record_loop_stats): values are now passed in.
+	* ntpd/ntp_loopfilter.c (local_clock): pass the values to
+	record_loop_stats().
+	* include/ntpd.h: Pass the parameters in to record_loop_stats().
+	With the discipline loop opened (disable ntp) the local clock
+	updates were not being sent to loopstats. That now is.
+	From: Dave Mills.	
+
 2001-05-10  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.99k33
